--- a/ProyectosPrueba/ProyectoPrueba1/app/src/main/AndroidManifest.xml
+++ b/ProyectosPrueba/ProyectoPrueba1/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.proyectoprueba1quehago">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -18,6 +20,7 @@
         </activity>
         <activity android:name=".Activities.Inicio"/>
         <activity android:name=".Activities.Registro"/>
+        <activity android:name=".Activities.App"/>
     </application>
 
 </manifest>
